--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -31,7 +31,7 @@
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
-
+        
         <script>
             !(function (t, e) {
                 var o, n, p, r;
@@ -99,5 +99,12 @@
                 person_profiles: "identified_only",
             });
         </script>
+        <script
+          type="text/javascript"
+          async
+          src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/1f5b6350-3c26-4b3d-95b7-4b2c65e57204-loader.js"
+        ></script>
+        <!-- RD Station Loader Script -->
+        <script async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/1f5b6350-3c26-4b3d-95b7-4b2c65e57204-loader.js"></script>
     </body>
 </html>
