--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
 
-        <title>Site de viagens</title>
+        <title>Bella Renda</title>
+        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <!-- RD Station -->
+        <script type="text/javascript" async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/1f5b6350-3c26-4b3d-95b7-4b2c65e57204-loader.js"></script>
     
         <script>
             // Only load visual edit scripts when inside an iframe and visual edits are enabled
@@ -99,12 +102,7 @@
                 person_profiles: "identified_only",
             });
         </script>
-        <script
-          type="text/javascript"
-          async
-          src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/1f5b6350-3c26-4b3d-95b7-4b2c65e57204-loader.js"
-        ></script>
         <!-- RD Station Loader Script -->
-        <script async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/1f5b6350-3c26-4b3d-95b7-4b2c65e57204-loader.js"></script>
+        <script type="text/javascript" async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/1f5b6350-3c26-4b3d-95b7-4b2c65e57204-loader.js"></script>
     </body>
 </html>
